# openfold-3

./: .dockerignore  .git-blame-ignore-revs  .gitignore  =0.5.0  ANALYSIS_INDEX.md  CITATION.cff  CODEBASE_ANALYSIS.md  Dockerfile  FILE_STRUCTURE_REFERENCE.md  INSTALL.md  LICENSE  MLX_INTEGRATION.md  PROGRESS.md  QUICK_SUMMARY.txt  README.md  RUN.md  START_HERE.md  WOW.md  deepspeed_config.json  environment.yml  fix_msa_templates.patch  inference.yml  inference_1gpu.yml  install.sh  mlx_quality_diagnosis.py  msa_only_runner.yaml  offline_runner_config.yaml  pixi.toml  predict.sh  pyproject.toml  run_dummy_lightning_script.py  run_openfold.py  run_pretrained_openfold.py  setup.py  test_mlx_activations.py  test_mlx_inference.py  test_mlx_msa_perfect.py  test_mlx_perfect_fold.py  test_mlx_quick_quality.py  test_offline_query.json  (+5 more)
.github/ISSUE_TEMPLATE/: feature_request.md  openfold-issue-template.md  openfold3-issue-template.md
.github/workflows/: cache-params.yml  check-storage.yml  ci_test.yml  cleanup.yml  docker-image.yml  publish-pypi.yml  ruff.yml  run-full-integration-test.yml  run-test.yml
benchmarks/: README.md  af3server_submission_casp16.json  benchmark_runner.py  benchmark_runner_with_foldseek.py  casp16_monomers.fasta  compare_af3_results.py  create_af3server_submission.py  demo_benchmarker.py  experiment_config.json  foldseek_template_retriever.py  foldseek_vs_colabfold_benchmark.py  parallel_msa_template_pipeline.py  quick_test.py  real_colabfold_vs_foldseek_benchmark.py  requirements.txt  template_speed_benchmark.py  test_benchmarker.py  ultimate_af3_foldseek_comparison.py
benchmarks/config_samples/: custom_benchmark.yaml
benchmarks/real_colabfold_comparison/: real_benchmark_data.json  real_comparison_report.md
benchmarks/results/: benchmark_report.json  benchmark_results.csv  benchmark_results.json
benchmarks/template_speed_comparison/: speed_benchmark_data.json  template_speed_report.md
benchmarks/test_comparison/: raw_results.json
deepspeed_configs/: ds_openfold_orig.json  ds_stage2_default.json  ds_stage2_default_fp32.json  ds_stage2_default_fp32_offload.json  ds_stage2_minimal.json
docs/source/: Inference.md  Installation.md  conf.py  configuration_api.md  configuration_reference.md  index.md  input_format.md  kernels.md  precomputed_msa_explanation.md  precomputed_msa_generation_how_to.md  precomputed_msa_how_to.md  precomputed_msas.md  precomputed_msas_explanation.md  template_explanation.md  template_how_to.md
docs_of3/source/: inference.md  input_format.md  installation.md
environments/: production-modern.yml  production.yml
examples/: example_runner.yml  inference_new.yml  mlx_attention_example.py  msa_server.yml  pdb_sample_dataset_config.yml  runner.yaml  runner.yml  runner_inference.yml  training_new.yml
examples/example_inference_inputs/: query_homomer_with_direct_cif_templates.json  query_multimer_with_direct_cif_templates.json  query_real.json
examples/example_runner_yamls/: cuequivariance.yml
examples/multimer/: query_multimer.json
examples/multiple_predictions/: query.json
examples/reference_full_config/: full_config.yml
examples/training_yamls/: finetune_1.yml  finetune_2.yml  finetune_3.yml  finetune_all.yml  initial_training.yml
examples_of3/monomer/: query_monomer.json
examples_of3/multimer/: query_multimer.json
experiments/: test_templates_openfold.py
mlx_inference_test_output/: experiment_config.json  inference_query_set.json  model_config.json
mlx_msa_perfect_output/: alignment_result.txt  experiment_config.json  inference_query_set.json  summary.txt
mlx_perfect_fold_output/: experiment_config.json  model_config.json
mlx_quick_quality_test/: experiment_config.json  inference_query_set.json  model_config.json
openfold3/: __init__.py  experiment_builder.py  hacks.py  run_openfold.py  setup_openfold.py
openfold3/config/: apple_silicon.yaml
openfold3/core/: __init__.py
openfold3/entry_points/: experiment_runner.py  import_utils.py  utils.py  validator.py
openfold3/model_implementations/: __init__.py  config_compiler.py  registry.py
openfold3/monomer_multimer/: model.py
openfold3/projects/: __init__.py  constants.py  registry.py
openfold3/tests/: __init__.py  compare_utils.py  test_colabfold_msa.py  test_dataset_config.py  test_inference_full.py  test_structure_from_query.py
scripts/: alignment_data_to_fasta.py  build_deepspeed_config.py  convert_of_weights_to_jax.py  convert_v1_to_v2_weights.py  data_dir_to_fasta.py  deepspeed_inference_test.py  download_cameo.py  download_openfold_params.sh  fasta_to_clusterfile.py  generate_alphafold_feature_dict.py  generate_chain_data_cache.py  generate_mmcif_cache.py  install_third_party_dependencies.sh  make_monomer_distillation_set_datacache.py  minimal_install.sh  precompute_alignments.py  precompute_alignments_mmseqs.py  precompute_embeddings.py  prep_proteinnet_msas.py  setup_openfold3.sh  unpack_proteinnet.py  utils.py  validate_msas.py
scripts/alignment_db_scripts/: add_non_unique_to_alignment_db.py  create_alignment_db.py  create_alignment_db_sharded.py  unify_alignment_db_indices.py
scripts/analysis/: run_ost.py
scripts/common/: expand_alignment_duplicates.py  (+1 more)
tests/: Dockerfile  __init__.py  compare_utils.py  config.py  conftest.py  custom_assert_utils.py  data_utils.py  test_af3_model.py  test_atomize_utils.py  test_chain_pair_mask.py  test_cleanup_bonds.py  test_colabfold_msa.py  test_confidence_loss.py  test_confidence_metrics.py  test_config_update.py  test_configs_nersc.py  test_cueq_kernels.py  test_data_pipeline.py  test_data_transforms.py  test_dataset_config.py  test_dataset_utils.py  test_deepspeed_evo_attention.py  test_diffusion_conditioning.py  test_diffusion_loss.py  test_diffusion_module.py  test_diffusion_transformer.py  test_distogram_loss.py  test_embedders.py  test_entry_points.py  test_evoformer.py  test_feats.py  test_heads.py  test_import_weights.py  test_inference_full.py  test_kernels.py  test_labels.py  test_lmdb.py  test_loss.py  test_mlx_attention.py  test_mlx_inference_improved.py  (+27 more)
(+687 files in other folders)
