[build-system]
requires = ["setuptools", "pip", "torch", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "openfold3"
version = "0.1.0"
dependencies = [
  "torch",
  "pytorch-lightning",
  "numpy",
  "pandas",
  "PyYAML",
  "requests",
  "scipy",
  "tqdm",
  "typing-extensions",
  "wandb",
  "ml-collections",
  "mkl",
  "aria2",
  "biotite",#>=1.1.0",
  "rdkit",
  "boto3",
  "memory_profiler",
  "func_timeout",
  "lmdb",
  "ijson",
  "deepspeed",
  "dm-tree",
  "pdbeccdutils",
  # tests still require
  "biopython",
  "modelcif",
]
description = "A PyTorch reimplementation of DeepMind's AlphaFold 2 & 3"
requires-python = ">=3.10"
license = "Apache-2.0"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]


[tool.ruff]
line-length = 88
exclude = [
    "notebooks/OpenFold.ipynb",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "E741",
    "SIM108",
]
extend-safe-fixes = ["UP006"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
python_files = ["test_*.py"]
