[build-system]
# torch used at build needs to match the one at runtime
requires = ["setuptools", "pip", "torch ==2.5.1", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "openfold3"
version = "0.1.0"
dependencies = [
  "torch ==2.5.1",
  "pytorch-lightning",
  "numpy",
  "pandas",
  "PyYAML",
  "requests",
  "scipy",
  "tqdm",
  "typing-extensions",
  "wandb",
  "ml-collections",
  "mkl",
  "aria2",
  "biotite >=1.1.0, <1.3",
  "rdkit",
  "boto3",
  "memory_profiler",
  "func_timeout",
  "lmdb",
  "ijson",
  "deepspeed",
  "dm-tree",
  "pdbeccdutils",
  "nvidia-cutlass",

  # additonal pins
  # https://github.com/triton-lang/triton/issues/5919
  # According to that issue, the pin may not be necessary in Python >3.13.
  # Note that this pin has the effect of pinning torch <=2.5.1.
  "triton <3.2;python_version<\"3.13\"",

  # tests still require
  "biopython",
  "modelcif",
  "openmm",
  "pdbfixer @ https://github.com/openmm/pdbfixer/archive/refs/tags/v1.11.tar.gz"
]
description = "A PyTorch reimplementation of DeepMind's AlphaFold 2 & 3"
requires-python = ">=3.10"
license = "Apache-2.0"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "scripts"]

[tool.setuptools.package-data]
openfold3 = [
  "core/kernels/cuda/csrc/*",
  "projects/*/config/*.yml",
  "legacy/*/config/*.yml",
]
"*" = [
  "resources/stereo_chemical_props.txt"
]

[tool.ruff]
line-length = 88
exclude = [
    "notebooks/OpenFold.ipynb",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "E741",
    "SIM108",
]
extend-safe-fixes = ["UP006"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
python_files = ["test_*.py"]
